# Copyright 2010-2025 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "ortools_requirements",
    extra_args = [
        "--allow-unsafe",  # Pin packages considered unsafe
        "--resolver=backtracking",  # Avoid warning, new default
    ],
    generate_hashes = False,
    requirements_in = "ortools_requirements.in",
    requirements_txt = "ortools_requirements.txt",
)

compile_pip_requirements(
    name = "notebook_requirements",
    extra_args = [
        "--allow-unsafe",  # Pin packages considered unsafe
        "--resolver=backtracking",  # Avoid warning, new default
    ],
    generate_hashes = False,
    requirements_in = "notebook_requirements.in",
    requirements_txt = "notebook_requirements.txt",
)
