# Copyright 2010-2022 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "glpk",
    srcs = glob(
        [
            "glpk-5.0/src/*.c",
            "glpk-5.0/src/*/*.c",
            "glpk-5.0/src/*.h",
            "glpk-5.0/src/*/*.h",
        ],
        exclude = [
            "glpk-5.0/src/proxy/main.c",
            "glpk-5.0/src/zlib/*",
        ],
    ),
    hdrs = [
        "glpk-5.0/src/glpk.h",
    ],
    copts = [
        "-w",
        "-Iexternal/glpk/glpk-5.0/src",
        "-Iexternal/glpk/glpk-5.0/src/amd",
        "-Iexternal/glpk/glpk-5.0/src/api",
        "-Iexternal/glpk/glpk-5.0/src/bflib",
        "-Iexternal/glpk/glpk-5.0/src/colamd",
        "-Iexternal/glpk/glpk-5.0/src/draft",
        "-Iexternal/glpk/glpk-5.0/src/env",
        "-Iexternal/glpk/glpk-5.0/src/intopt",
        "-Iexternal/glpk/glpk-5.0/src/minisat",
        "-Iexternal/glpk/glpk-5.0/src/misc",
        "-Iexternal/glpk/glpk-5.0/src/mpl",
        "-Iexternal/glpk/glpk-5.0/src/npp",
        "-Iexternal/glpk/glpk-5.0/src/proxy",
        "-Iexternal/glpk/glpk-5.0/src/simplex",
    ],
    deps = ["@zlib"],
    includes = ["glpk-5.0/src"],
    visibility = ["//visibility:public"],
)
