# Copyright 2010-2024 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "glpk",
    srcs = glob(
        [
            "src/*.c",
            "src/*/*.c",
            "src/*.h",
            "src/*/*.h",
        ],
        exclude = [
            "src/proxy/main.c",
            "src/zlib/*",
        ],
    ),
    hdrs = [
        "src/glpk.h",
    ],
    copts = [
        "-w",
        "-Iexternal/glpk/src",
        "-Iexternal/glpk/src/amd",
        "-Iexternal/glpk/src/api",
        "-Iexternal/glpk/src/bflib",
        "-Iexternal/glpk/src/colamd",
        "-Iexternal/glpk/src/draft",
        "-Iexternal/glpk/src/env",
        "-Iexternal/glpk/src/intopt",
        "-Iexternal/glpk/src/minisat",
        "-Iexternal/glpk/src/misc",
        "-Iexternal/glpk/src/mpl",
        "-Iexternal/glpk/src/npp",
        "-Iexternal/glpk/src/proxy",
        "-Iexternal/glpk/src/simplex",
    ],
    deps = ["@zlib"],
    includes = ["src"],
    visibility = ["//visibility:public"],
)
